--- a/Dockerfile.ci_tools
+++ b/Dockerfile.ci_tools
@@ -15,3 +15,5 @@ RUN sudo apk add \
         gettext      \
         openjdk8     \
         jq
+
+RUN git clone https://github.com/pdf2htmlEX/pdf2htmlEX/tree/master
