--- a/Dockerfile.ci_tools
+++ b/Dockerfile.ci_tools
@@ -1,19 +1,46 @@
-FROM alpine:3.22
+FROM debian:bookworm
 
-RUN  apk update
-RUN sudo apk add \
-        sudo         \
-        tar          \
-        wget         \
-        git          \
-        pkgconfig    \
-        ruby         \
-        cmake        \
-        make         \
-        gcc          \
-        g++          \
-        gettext      \
-        openjdk8     \
-        jq
+# install latex  
+RUN apt update
+RUN apt install -y \
+                make \
+                texlive-full
 
-RUN git clone https://github.com/pdf2htmlEX/pdf2htmlEX/tree/master
+# install pdf2htmlEX
+ARG DEBIAN_FRONTEND=noninteractive
+
+# Core packages needed only at build-time + runtime libs
+RUN apt update && apt install -y \
+    git curl wget make g++ pkg-config cmake \
+    autoconf automake libtool dpkg-dev           \
+    fontforge poppler-utils                      \
+    libpng-dev zlib1g-dev libfreetype6-dev       \
+    libjpeg-dev libopenjp2-7-dev                 \
+    libxml2-dev gettext jq
+
+WORKDIR /app
+
+# ---------- build pdf2htmlEX ----------
+RUN git clone https://github.com/pdf2htmlEX/pdf2htmlEX.git && \
+    cd pdf2htmlEX && \
+    \
+    # 1) nuke all 'sudo ' strings (the scripts assume sudo)
+    sed -i 's/sudo //g' buildScripts/* && \
+    \
+    # 2) drop the obsolete Java-8 dependency ­(not in Bookworm ARM64)
+    sed -i '/openjdk-8-jre-headless/d' buildScripts/getBuildToolsApt && \
+    \
+    # 3) run their meta-build script as root
+    ./buildScripts/buildInstallLocallyApt && \
+    \
+    # ---------- optional clean-up ----------
+    # remove big build tool-chains to slim the final image
+    apt purge -y \
+        git curl wget make g++ pkg-config cmake \
+        autoconf automake libtool dpkg-dev build-essential && \
+    apt autoremove -y && \
+    apt clean && \
+    rm -rf /var/lib/apt/lists/* /root/.cache
+
+# ---------- default command ----------
+ENTRYPOINT ["pdf2htmlEX"]
