--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,28 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: build_latex
+# run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [push]
+
 jobs:
-  build-html-files-from-tex-source-codes:
-    runs-on: focal1119/latex-tools-box:ci
+  build_latex:
+    runs-on: ubuntu-latest
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v5
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
-      - name: Build PDF & HTML via pipelines_ci.sh
-        run: |
-          chmod +x scripts/pipelines_ci.sh
-          ./scripts/pipelines_ci.sh
+      - name: Set up Git repository
+        uses: actions/checkout@v6
+      - name: Compile LaTeX document
+        uses: xu-cheng/latex-action@v4
+        with:
+          root_file: src/yh_resume.tex
+      - name: Build html
+        uses: SichangHe/pdf2htmlEX-action@v0.0.2
+        with:
+          arguments: --zoom 1.3 --dest-dir output src/yh_resume.pdf index.html        
+      # - name: Upload PDF file
+      #   uses: actions/upload-artifact@v5
+      #   with:
+      #     name: PDF
+      #     path: src/yh_resume.pdf
+      - name: Run scripts/pipelines_ci.sh to update html
+        run: ./scripts/pipelines_ci.sh      
       - uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions                
