--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Build html
         uses: SichangHe/pdf2htmlEX-action@v0.0.2
         with:
-          arguments: --zoom 1.3 --dest-dir output yh_resume.pdf index.html        
+          arguments: --zoom 1.3 --dest-dir output src/yh_resume.pdf index.html        
       # - name: Upload PDF file
       #   uses: actions/upload-artifact@v5
       #   with:
