--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,5 +3,21 @@
     "compatibility_date": "2025-11-26",
     "assets": {
         "directory": "output"
-    }
+    },
+    "observability": {
+        "enabled": false,
+        "head_sampling_rate": 1,
+        "logs": {
+            "enabled": true,
+            "head_sampling_rate": 1,
+            "persist": true,
+            "invocation_logs": true
+        },
+        "traces": {
+            "enabled": false,
+            "persist": true,
+            "head_sampling_rate": 1
+        }
+    }    
+    
 }
